# VeilProtocol

./: .gitignore  CLAUDE.md  README.md  fix-m4.js  package-lock.json  package.json  scratch.js  scratch2.js  scratch3.js  scratch4.js
contracts/: Cargo.toml
contracts/amm_pool/: Cargo.toml
contracts/amm_pool/src/: lib.rs
contracts/amm_pool/test_snapshots/tests/: test_add_and_remove_liquidity.1.json  test_double_refund_rejected.1.json  test_double_settle_rejected.1.json  test_double_submit_same_nullifier_rejected.1.json  test_refund_after_settle_rejected.1.json  test_refund_after_timeout_inserts_note.1.json  test_refund_before_timeout_rejected.1.json  test_settle_batch_inserts_outputs_and_advances_batch.1.json  test_settle_rejects_missing_auditor_ct.1.json  test_settle_requires_full_batch.1.json  test_submit_order_spends_nullifier_and_stores_record.1.json
contracts/asp/: Cargo.toml
contracts/asp/src/: lib.rs  test_tmp.rs
contracts/asp/test_snapshots/tests/: test_check_entry_approved_not_blocked.1.json  test_check_entry_not_approved_fails.1.json  test_initialize_and_roots.1.json  test_update_approved_requires_operator.1.json
contracts/lending/: Cargo.toml
contracts/lending/src/: lib.rs
contracts/lending/test_snapshots/tests/: test_liquidate_healthy_loan_rejected.1.json  test_liquidate_overflow_safe.1.json  test_liquidate_unhealthy_loan_succeeds.1.json  test_repay_closed_loan_rejected.1.json  (+6 more)
contracts/mock_oracle/: Cargo.toml
contracts/mock_oracle/src/: lib.rs
contracts/veil_core/: Cargo.toml
contracts/veil_core/src/: lib.rs  poseidon.rs  verifier.rs
(+203 files in other folders)
