[workspace]
members = ["veil_core", "asp", "amm_pool", "lending", "mock_oracle"]
resolver = "2"

[workspace.dependencies]
soroban-sdk = { version = "26.0.1", features = ["hazmat-crypto"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
