[package]
name = "lending"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { version = "26.0.1", features = ["testutils", "hazmat-crypto"] }
veil_core   = { path = "../veil_core", features = ["testutils"] }
